I added an image and update index.html and create a css file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <titles>
     Github Portfolio
   </titles>
+  <link href="style.css"tupe="text.css" rel="stylesheet"/>
 </head>
 
   <body>
     <h1> My Github Portfolio</h1>
+    <h2> Rafael Perez</h2>
+    <img src="Hola.png" alt="me" width="50px">
+    <p> Brief BIO</p>
   </body>
 </html>
